src/main/java/antlr/BasicParser.java
// Generated from ./BasicParser.g4 by ANTLR 4.7
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BasicParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, BEGIN=2, END=3, OPEN_BRACKETS=4, CLOSE_BRACKETS=5, IS=6, COMMA=7, 
		SKIP_=8, ASSIGNMENT=9, READ=10, FREE=11, RETURN=12, EXIT=13, PRINT=14, 
		PRINTLN=15, IF=16, THEN=17, ELSE=18, FI=19, WHILE=20, DO=21, DONE=22, 
		FOR=23, BREAK=24, CONTINUE=25, UNTIL=26, SEMI_COLON=27, NEW_PAIR=28, CALL=29, 
		FST=30, SND=31, VOID=32, INT=33, BOOL=34, CHAR=35, STRING=36, OPEN_SQUARE_BRACKETS=37, 
		CLOSE_SQUARE_BRACKETS=38, PAIR=39, CLASS=40, OPEN_CURLY_BRACKET=41, CLOSE_CURLY_BRACKET=42, 
		PUBLIC=43, SELF=44, DOT=45, NEW=46, NOT=47, MINUS=48, LENGTH=49, ORDINAL=50, 
		CHR=51, COMPLEMENT=52, MULTIPLY=53, DIVIDE=54, MODULO=55, ADD=56, GREATER_THAN=57, 
		GREATER_OR_EQUAL=58, LESS_THAN=59, LESS_OR_EQUAL=60, EQUALS=61, NOT_EQUALS=62, 
		AND=63, OR=64, BITWISEOR=65, BITWISEAND=66, BITWISEXOR=67, SHIFTLEFT=68, 
		SHIFTRIGHT=69, HELLO=70, NULL=71, TRUE=72, FALSE=73, IDENT=74, INTEGER=75, 
		CHAR_LITER=76, STR_LITER=77;
	public static final int
		RULE_program = 0, RULE_func = 1, RULE_paramList = 2, RULE_param = 3, RULE_stat = 4, 
		RULE_assignLhs = 5, RULE_assignRhs = 6, RULE_classOp = 7, RULE_argList = 8, 
		RULE_pairElem = 9, RULE_type = 10, RULE_baseType = 11, RULE_arrayType = 12, 
		RULE_baseArrayType = 13, RULE_pairType = 14, RULE_pairElemType = 15, RULE_expr = 16, 
		RULE_unaryOper = 17, RULE_arrayElem = 18, RULE_intLiter = 19, RULE_boolLiter = 20, 
		RULE_charLiter = 21, RULE_strLiter = 22, RULE_arrayLiter = 23, RULE_pairLiter = 24, 
		RULE_attribute = 25, RULE_constructor = 26, RULE_newclass = 27, RULE_method = 28;
	public static final String[] ruleNames = {
		"program", "func", "paramList", "param", "stat", "assignLhs", "assignRhs", 
		"classOp", "argList", "pairElem", "type", "baseType", "arrayType", "baseArrayType", 
		"pairType", "pairElemType", "expr", "unaryOper", "arrayElem", "intLiter", 
		"boolLiter", "charLiter", "strLiter", "arrayLiter", "pairLiter", "attribute", 
		"constructor", "newclass", "method"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'begin'", "'end'", "'('", "')'", "'is'", "','", "'skip'", 
		"'='", "'read'", "'free'", "'return'", "'exit'", "'print'", "'println'", 
		"'if'", "'then'", "'else'", "'fi'", "'while'", "'do'", "'done'", "'for'", 
		"'break'", "'continue'", "'until'", "';'", "'newpair'", "'call'", "'fst'", 
		"'snd'", "'void'", "'int'", "'bool'", "'char'", "'string'", "'['", "']'", 
		"'pair'", "'class'", "'{'", "'}'", "'public'", "'self'", "'.'", "'new'", 
		"'!'", "'-'", "'len'", "'ord'", "'chr'", "'~'", "'*'", "'/'", "'%'", "'+'", 
		"'>'", "'>='", "'<'", "'<='", "'=='", "'!='", "'&&'", "'||'", "'|'", "'&'", 
		"'^'", "'<<'", "'>>'", null, "'null'", "'true'", "'false'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "COMMENT", "BEGIN", "END", "OPEN_BRACKETS", "CLOSE_BRACKETS", "IS", 
		"COMMA", "SKIP_", "ASSIGNMENT", "READ", "FREE", "RETURN", "EXIT", "PRINT", 
		"PRINTLN", "IF", "THEN", "ELSE", "FI", "WHILE", "DO", "DONE", "FOR", "BREAK", 
		"CONTINUE", "UNTIL", "SEMI_COLON", "NEW_PAIR", "CALL", "FST", "SND", "VOID", 
		"INT", "BOOL", "CHAR", "STRING", "OPEN_SQUARE_BRACKETS", "CLOSE_SQUARE_BRACKETS", 
		"PAIR", "CLASS", "OPEN_CURLY_BRACKET", "CLOSE_CURLY_BRACKET", "PUBLIC", 
		"SELF", "DOT", "NEW", "NOT", "MINUS", "LENGTH", "ORDINAL", "CHR", "COMPLEMENT", 
		"MULTIPLY", "DIVIDE", "MODULO", "ADD", "GREATER_THAN", "GREATER_OR_EQUAL", 
		"LESS_THAN", "LESS_OR_EQUAL", "EQUALS", "NOT_EQUALS", "AND", "OR", "BITWISEOR", 
		"BITWISEAND", "BITWISEXOR", "SHIFTLEFT", "SHIFTRIGHT", "HELLO", "NULL", 
		"TRUE", "FALSE", "IDENT", "INTEGER", "CHAR_LITER", "STR_LITER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BasicParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BasicParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(BasicParser.BEGIN, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode END() { return getToken(BasicParser.END, 0); }
		public TerminalNode EOF() { return getToken(BasicParser.EOF, 0); }
		public List<NewclassContext> newclass() {
			return getRuleContexts(NewclassContext.class);
		}
		public NewclassContext newclass(int i) {
			return getRuleContext(NewclassContext.class,i);
		}
		public List<FuncContext> func() {
			return getRuleContexts(FuncContext.class);
		}
		public FuncContext func(int i) {
			return getRuleContext(FuncContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(BEGIN);
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(59);
				newclass();
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(65);
					func();
					}
					} 
				}
				setState(70);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(71);
			stat(0);
			setState(72);
			match(END);
			setState(73);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(BasicParser.IDENT, 0); }
		public TerminalNode OPEN_BRACKETS() { return getToken(BasicParser.OPEN_BRACKETS, 0); }
		public TerminalNode CLOSE_BRACKETS() { return getToken(BasicParser.CLOSE_BRACKETS, 0); }
		public TerminalNode IS() { return getToken(BasicParser.IS, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode END() { return getToken(BasicParser.END, 0); }
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			type();
			setState(76);
			match(IDENT);
			setState(77);
			match(OPEN_BRACKETS);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 32)) & ~0x3f) == 0 && ((1L << (_la - 32)) & ((1L << (VOID - 32)) | (1L << (INT - 32)) | (1L << (BOOL - 32)) | (1L << (CHAR - 32)) | (1L << (STRING - 32)) | (1L << (PAIR - 32)) | (1L << (IDENT - 32)))) != 0)) {
				{
				setState(78);
				paramList();
				}
			}

			setState(81);
			match(CLOSE_BRACKETS);
			setState(82);
			match(IS);
			setState(83);
			stat(0);
			setState(84);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamListContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(BasicParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(BasicParser.COMMA, i);
		}
		public ParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitParamList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamListContext paramList() throws RecognitionException {
		ParamListContext _localctx = new ParamListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_paramList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			param();
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(87);
				match(COMMA);
				setState(88);
				param();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(BasicParser.IDENT, 0); }
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			type();
			setState(95);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public TerminalNode SKIP_() { return getToken(BasicParser.SKIP_, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(BasicParser.IDENT, 0); }
		public TerminalNode ASSIGNMENT() { return getToken(BasicParser.ASSIGNMENT, 0); }
		public AssignRhsContext assignRhs() {
			return getRuleContext(AssignRhsContext.class,0);
		}
		public AssignLhsContext assignLhs() {
			return getRuleContext(AssignLhsContext.class,0);
		}
		public TerminalNode READ() { return getToken(BasicParser.READ, 0); }
		public TerminalNode FREE() { return getToken(BasicParser.FREE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode EXIT() { return getToken(BasicParser.EXIT, 0); }
		public TerminalNode RETURN() { return getToken(BasicParser.RETURN, 0); }
		public TerminalNode PRINT() { return getToken(BasicParser.PRINT, 0); }
		public TerminalNode PRINTLN() { return getToken(BasicParser.PRINTLN, 0); }
		public TerminalNode IF() { return getToken(BasicParser.IF, 0); }
		public TerminalNode THEN() { return getToken(BasicParser.THEN, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(BasicParser.ELSE, 0); }
		public TerminalNode FI() { return getToken(BasicParser.FI, 0); }
		public TerminalNode WHILE() { return getToken(BasicParser.WHILE, 0); }
		public TerminalNode DO() { return getToken(BasicParser.DO, 0); }
		public TerminalNode DONE() { return getToken(BasicParser.DONE, 0); }
		public TerminalNode FOR() { return getToken(BasicParser.FOR, 0); }
		public TerminalNode OPEN_BRACKETS() { return getToken(BasicParser.OPEN_BRACKETS, 0); }
		public List<TerminalNode> COMMA() { return getTokens(BasicParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(BasicParser.COMMA, i);
		}
		public TerminalNode CLOSE_BRACKETS() { return getToken(BasicParser.CLOSE_BRACKETS, 0); }
		public TerminalNode BREAK() { return getToken(BasicParser.BREAK, 0); }
		public TerminalNode CONTINUE() { return getToken(BasicParser.CONTINUE, 0); }
		public TerminalNode UNTIL() { return getToken(BasicParser.UNTIL, 0); }
		public TerminalNode BEGIN() { return getToken(BasicParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(BasicParser.END, 0); }
		public TerminalNode CALL() { return getToken(BasicParser.CALL, 0); }
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public TerminalNode SELF() { return getToken(BasicParser.SELF, 0); }
		public List<ClassOpContext> classOp() {
			return getRuleContexts(ClassOpContext.class);
		}
		public ClassOpContext classOp(int i) {
			return getRuleContext(ClassOpContext.class,i);
		}
		public TerminalNode SEMI_COLON() { return getToken(BasicParser.SEMI_COLON, 0); }
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		return stat(0);
	}

	private StatContext stat(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		StatContext _localctx = new StatContext(_ctx, _parentState);
		StatContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_stat, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(98);
				match(SKIP_);
				}
				break;
			case 2:
				{
				setState(99);
				type();
				setState(100);
				match(IDENT);
				setState(101);
				match(ASSIGNMENT);
				setState(102);
				assignRhs();
				}
				break;
			case 3:
				{
				setState(104);
				assignLhs();
				setState(105);
				match(ASSIGNMENT);
				setState(106);
				assignRhs();
				}
				break;
			case 4:
				{
				setState(108);
				match(READ);
				setState(109);
				assignLhs();
				}
				break;
			case 5:
				{
				setState(110);
				match(FREE);
				setState(111);
				expr(0);
				}
				break;
			case 6:
				{
				setState(112);
				match(EXIT);
				setState(113);
				expr(0);
				}
				break;
			case 7:
				{
				setState(114);
				match(RETURN);
				setState(115);
				expr(0);
				}
				break;
			case 8:
				{
				setState(116);
				match(PRINT);
				setState(117);
				expr(0);
				}
				break;
			case 9:
				{
				setState(118);
				match(PRINTLN);
				setState(119);
				expr(0);
				}
				break;
			case 10:
				{
				setState(120);
				match(IF);
				setState(121);
				expr(0);
				setState(122);
				match(THEN);
				setState(123);
				stat(0);
				setState(124);
				match(ELSE);
				setState(125);
				stat(0);
				setState(126);
				match(FI);
				}
				break;
			case 11:
				{
				setState(128);
				match(WHILE);
				setState(129);
				expr(0);
				setState(130);
				match(DO);
				setState(131);
				stat(0);
				setState(132);
				match(DONE);
				}
				break;
			case 12:
				{
				setState(134);
				match(FOR);
				setState(135);
				match(OPEN_BRACKETS);
				setState(136);
				stat(0);
				setState(137);
				match(COMMA);
				setState(138);
				expr(0);
				setState(139);
				match(COMMA);
				setState(140);
				stat(0);
				setState(141);
				match(CLOSE_BRACKETS);
				setState(142);
				stat(0);
				setState(143);
				match(DONE);
				}
				break;
			case 13:
				{
				setState(145);
				match(BREAK);
				}
				break;
			case 14:
				{
				setState(146);
				match(CONTINUE);
				}
				break;
			case 15:
				{
				setState(147);
				match(DO);
				setState(148);
				stat(0);
				setState(149);
				match(UNTIL);
				setState(150);
				expr(0);
				}
				break;
			case 16:
				{
				setState(152);
				match(BEGIN);
				setState(153);
				stat(0);
				setState(154);
				match(END);
				}
				break;
			case 17:
				{
				setState(156);
				match(CALL);
				setState(157);
				match(IDENT);
				setState(158);
				match(OPEN_BRACKETS);
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPEN_BRACKETS) | (1L << NOT) | (1L << MINUS) | (1L << LENGTH) | (1L << ORDINAL) | (1L << CHR) | (1L << COMPLEMENT) | (1L << ADD))) != 0) || ((((_la - 71)) & ~0x3f) == 0 && ((1L << (_la - 71)) & ((1L << (NULL - 71)) | (1L << (TRUE - 71)) | (1L << (FALSE - 71)) | (1L << (IDENT - 71)) | (1L << (INTEGER - 71)) | (1L << (CHAR_LITER - 71)) | (1L << (STR_LITER - 71)))) != 0)) {
					{
					setState(159);
					argList();
					}
				}

				setState(162);
				match(CLOSE_BRACKETS);
				}
				break;
			case 18:
				{
				setState(163);
				_la = _input.LA(1);
				if ( !(_la==SELF || _la==IDENT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(165); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(164);
						classOp();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(167); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(176);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new StatContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_stat);
					setState(171);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(172);
					match(SEMI_COLON);
					setState(173);
					stat(2);
					}
					} 
				}
				setState(178);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class AssignLhsContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(BasicParser.IDENT, 0); }
		public TerminalNode SELF() { return getToken(BasicParser.SELF, 0); }
		public List<ClassOpContext> classOp() {
			return getRuleContexts(ClassOpContext.class);
		}
		public ClassOpContext classOp(int i) {
			return getRuleContext(ClassOpContext.class,i);
		}
		public ArrayElemContext arrayElem() {
			return getRuleContext(ArrayElemContext.class,0);
		}
		public PairElemContext pairElem() {
			return getRuleContext(PairElemContext.class,0);
		}
		public AssignLhsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignLhs; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitAssignLhs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignLhsContext assignLhs() throws RecognitionException {
		AssignLhsContext _localctx = new AssignLhsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignLhs);
		int _la;
		try {
			int _alt;
			setState(188);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(179);
				_la = _input.LA(1);
				if ( !(_la==SELF || _la==IDENT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(183);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(180);
						classOp();
						}
						} 
					}
					setState(185);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(186);
				arrayElem();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(187);
				pairElem();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignRhsContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ArrayLiterContext arrayLiter() {
			return getRuleContext(ArrayLiterContext.class,0);
		}
		public TerminalNode NEW_PAIR() { return getToken(BasicParser.NEW_PAIR, 0); }
		public TerminalNode OPEN_BRACKETS() { return getToken(BasicParser.OPEN_BRACKETS, 0); }
		public TerminalNode COMMA() { return getToken(BasicParser.COMMA, 0); }
		public TerminalNode CLOSE_BRACKETS() { return getToken(BasicParser.CLOSE_BRACKETS, 0); }
		public PairElemContext pairElem() {
			return getRuleContext(PairElemContext.class,0);
		}
		public TerminalNode CALL() { return getToken(BasicParser.CALL, 0); }
		public TerminalNode IDENT() { return getToken(BasicParser.IDENT, 0); }
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public TerminalNode SELF() { return getToken(BasicParser.SELF, 0); }
		public List<ClassOpContext> classOp() {
			return getRuleContexts(ClassOpContext.class);
		}
		public ClassOpContext classOp(int i) {
			return getRuleContext(ClassOpContext.class,i);
		}
		public TerminalNode NEW() { return getToken(BasicParser.NEW, 0); }
		public AssignRhsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignRhs; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitAssignRhs(this);
			else return visitor.visitChildren(this);
		}
	}
